test: include repository, service and controller test in addition to SecurityConfigTest and ScheduledTasksTest